# smhi-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml
install/: install.sh
src/: chart.rs  default_location.rs  main.rs  openstreetmap_api.rs  output.rs  rest_util.rs  smhi_api.rs  smhiapi.rs  url_util.rs  weather_printer.rs
