[package]
name = "smhi-cli"
version = "0.1.0"
authors = ["Pulgo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde_json = "1.0"
url = "2.1.1"
colored = "1.9.3"
plotlib = "0.5.1"
structopt = "0.3.13"
isahc = { version = "0.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }